--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-To use the program you need to download the raw code or copy it the open it with an ide then use a web browser to run it 
+To use the program you need to download/copy the raw codes of the 3 files and open them with an ide then use a web browser to run the html file linked to the javascript and css file 
