--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
-To use the program you need to download/copy the raw code and open it with an ide then use a web browser to run the html file
+To use the program you need to download/copy the raw codes of the 3 files (html,css,javascript) and open them with an ide then use a web browser to run the html file.
+then you can use the program to calculate stuff
