--- a/Readme
+++ b/Readme
@@ -1,2 +1,4 @@
 To use the program you need to download/copy the raw codes of the 3 files (html,css,javascript) and open them with an ide then use a web browser to run the html file.
 then you can use the program to calculate stuff
+OR alternatively just download the zip file consisting of all files and open the html file in an ide  then your web browser will be opened and you see the application.
+Thank you Enjoy.
